# MarkTech

./: .gitignore  .gitmodules  CMakeLists.txt  MarkTech.sln  README.md  export.py  frag.frag  gamma_lut.c  graphics.c  graphics.h  lutgen.c  main.c  nob.c  osx_scancodes.h  osx_window.h  osx_window.m  premake5.lua  scancodes.h  vert.vert  xdmath.h
Engine/: CMakeLists.txt  premake5.lua
Engine/EngineCore/: premake5.lua
Engine/EngineCore/Source/: 3DRenderer.cpp  3DRenderer.h  AssetRegistry.cpp  AssetRegistry.h  BaseComponent.cpp  BaseComponent.h  ComponentPool.h  ComponentRegistry.cpp  ComponentRegistry.h  Core.h  DX11Renderer.cpp  DX11Renderer.h  DX12Renderer.cpp  DX12Renderer.h  Engine.cpp  Engine.h  EngineCoreModule.cpp  EngineCoreModule.h  Input.cpp  Input.h  Keycodes.h  Lambert.hlsl  Level.cpp  Level.h  MemoryPool.cpp  MemoryPool.h  ModelComponent.h  PixelShader.hlsl  Pool.h  Renderer.cpp  Renderer.h  StbImageUsage.cpp  StringType.cpp  StringType.h  TransformComponent.h  Vectors.cpp  Vectors.h  VertexShader.hlsl  Vessel.cpp  Vessel.h  (+12 more)
Engine/EngineCore/Source/Shaders/: Frag.frag  GouraudFrag.frag  GouraudVertex.vert  Vertex.vert
Engine/Source/: Array.cpp  Array.h  AssetRegistry.cpp  AssetRegistry.h  BaseComponent.cpp  BaseComponent.h  BaseEntity.cpp  BaseEntity.h  BasePointEntity.cpp  BasePointEntity.h  CameraComponent.cpp  CameraComponent.h  ComponentPool.h  ComponentRegistry.cpp  ComponentRegistry.h  Configs.cpp  Configs.h  Core.h  D3D11Renderer.cpp  D3D11Renderer.h  D3DRenderer.cpp  D3Drenderer.h  DllExport.h  Engine.cpp  Engine.h  EngineModule.cpp  EngineModule.h  GameInfo.cpp  GameInfo.h  Globals.cpp  Globals.h  ImGui.h  Input.cpp  Input.h  Keycodes.h  Level.cpp  Level.h  Log.cpp  Log.h  MModel.cpp  (+31 more)
Engine/Source/AssetDB/: CMakeLists.txt
Engine/Source/AssetDB/Private/: AssetDB.cpp  Compiler.cpp  Compiler.h  Database.cpp  Database.h  Main.cpp  Packager.cpp  Packager.h  StringHash.cpp  StringHash.h
Engine/Source/AssetDB/Public/: AssetDB.h
Engine/Source/Core/: CMakeLists.txt  premake5.lua
Engine/Source/Core/Private/: 3DRenderer.cpp  3DRenderer.h  Application.cpp  MarkTechEngine.cpp  MarkTechEngine.h  Module.cpp  WinModule.cpp  WinModule.h
Engine/Source/Core/Private/Allocators/: AllocatorUtils.cpp
Engine/Source/Core/Private/Math3D/: Math3D.cpp
Engine/Source/Core/Private/StringId/: StringId.cpp
Engine/Source/Core/Public/: Application.h  Core.h  Engine.h  Module.h
Engine/Source/Core/Public/Allocators/: AllocatorUtils.h
Engine/Source/Core/Public/DataStructures/: Array.h
Engine/Source/Core/Public/Math3D/: Math3D.h
Engine/Source/Core/Public/PrimitiveTypes/: intalias.h
Engine/Source/Core/Public/StringId/: StringId.h
Engine/Source/Global/Public/: Core.h
Engine/Source/Graphics/: premake5.lua
Engine/Source/Graphics/Private/: GraphicsInterface.cpp  WindowWrapper.cpp  WindowWrapper.h
Engine/Source/Graphics/Public/: Buffer.h  GraphicsContext.h  GraphicsInterface.h  ModuleInterface.h  Pipeline.h  Shader.h
Engine/Source/Platform/: CMakeLists.txt
Engine/Source/Platform/Private/FileSystem/: FileSystem.cpp
Engine/Source/Platform/Private/Threads/: Mutex.cpp  Thread.cpp
Engine/Source/Platform/Private/Window/: Window.cpp
Engine/Source/Platform/Public/DynamicLib/: DynamicLib.h
Engine/Source/Platform/Public/FileSystem/: FileSystem.h
Engine/Source/Platform/Public/Threads/: Mutex.h  Thread.h
Engine/Source/Platform/Public/Window/: Window.h
Engine/Source/ResourceCompiler/: premake5.lua
Engine/Source/ResourceCompiler/Private/: ResourceCompiler.cpp  ResourceCompiler.h
Engine/Source/ResourceCompiler/Public/: Compiler.h  ResourceCompilerInterface.h
Engine/Source/ResourceManager/: premake5.lua
Engine/Source/ResourceManager/Private/: Manager.cpp  Manager.h  ResourceManagerInterface.cpp  ShaderResourceImpl.cpp  ShaderResourceImpl.h
Engine/Source/ResourceManager/Public/: ResourceManager.h  ResourceManagerInterface.h  ShaderResource.h
Engine/Source/Runtime/Core/: premake5.lua
Engine/Source/Runtime/Core/Private/: CVar.cpp  CmdArgs.cpp  HashMap.cpp  HashString.cpp  Log.cpp  Math3D.cpp  MemoryAllocator.cpp  MemoryArena.cpp  NBT.cpp  PoolAllocator.cpp  StackAllocator.cpp
Engine/Source/Runtime/Core/Public/: Array.h  Assert.h  Byteswap.h  CVar.h  CmdArgs.h  Dictionary.h  HashMap.h  HashString.h  LinkedList.h  Log.h  Math3D.h  MemoryAllocator.h  MemoryArena.h  NBT.h  PoolAllocator.h  StackAllocator.h
Engine/Source/Runtime/DSA/: premake5.lua
Engine/Source/Runtime/DSA/Private/: Allocator.cpp
Engine/Source/Runtime/DSA/Public/: Allocator.h  DynArray.h  LinkedList.h  PrimitiveTypes.h
Engine/Source/Runtime/Engine/: premake5.lua
Engine/Source/Runtime/Engine/Private/: Engine.cpp
Engine/Source/Runtime/Engine/Public/: Engine.h
Engine/Source/Runtime/FileSystem/: premake5.lua
Engine/Source/Runtime/FileSystem/Private/: File.cpp  Path.cpp
Engine/Source/Runtime/Gameplay/: premake5.lua
Engine/Source/Runtime/Graphics/: premake5.lua
Engine/Source/Runtime/HighResTimer/: premake5.lua
Engine/Source/Runtime/Input/: premake5.lua
Engine/Source/Runtime/Platform/: premake5.lua
Engine/Source/Runtime/ResourceManager/: premake5.lua
Engine/Source/Runtime/Sandbox/: args.txt  hello_world.mpk  premake5.lua
Engine/Source/Runtime/Shared/: AssetTypes.h  DLLUTLS.h  PrimitiveTypes.h  Version.h
Engine/Source/Runtime/Threads/: premake5.lua
Engine/Source/Runtime/nbt/: premake5.lua
Engine/Source/Sandbox/: CMakeLists.txt
Engine/Source/Sandbox/Private/: Main.cpp
Engine/Source/Shaders/: Albedo.hlsl  Core.hlsli  DefaultVertex.hlsl  Lambert.hlsl  shader.hlsl
Engine/Source/Standard/: premake5.lua
Engine/Source/Standard/Private/: AllocatorType.cpp  StringType.cpp
Engine/Source/Standard/Public/: AllocatorType.h  Core.h  List.h  SharedPointer.h  StringType.h
Engine/Source/Tools/MarkPak/: premake5.lua
Engine/Source/Tools/ResourceCompiler/: OutputCool.mpk  output.mpk  premake5.lua  text.txt  text1.txt
Engine/Source/Window/: premake5.lua
Engine/Source/Window/Private/: WindowInterface.cpp
Engine/Source/Window/Public/: WindowInterface.h
(+231 files in other folders)
